# kaggle-house-prices

./: .gitignore  README.org  kaggle-housing-prices.ipynb  pyproject.toml  submission.csv
