[tool.poetry]
name = "kaggle-house-prices"
version = "0.1.0"
description = "Kaggle submission for the Housing Prices Competition"
authors = ["Billy Ross <billy.ross@protonmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.2"
jupyterlab = "^0.34.10"
scikit-learn = "^0.19.2"
pandas = "^0.23.4"
seaborn = "^0.9.0"
xgboost = "^0.80.0"

[tool.poetry.dev-dependencies]
